compile_tests/expected/fns.stderr
error: unsupported pattern
 --> compile_tests/src/fns.rs:5:13
  |
5 |     fn func((a, b): (f32, f32)) -> (f32, f32) {
  |             ^^^^^^

error: unsupported expression
 --> compile_tests/src/fns.rs:6:9
  |
6 |         (a, b)
  |         ^^^^^^

error[E0277]: the trait bound `(f32, f32): ragna::types::GpuType` is not satisfied
  --> compile_tests/src/fns.rs:5:21
   |
5  |     fn func((a, b): (f32, f32)) -> (f32, f32) {
   |                     ^^^^^^^^^^ the trait `ragna::types::GpuType` is not implemented for `(f32, f32)`
   |
   = help: the following other types implement trait `ragna::types::GpuType`:
             bool
             f32
             i32
             u32

error[E0308]: mismatched types
 --> compile_tests/src/fns.rs:5:13
  |
5 |     fn func((a, b): (f32, f32)) -> (f32, f32) {
  |             ^^^^^^  ---------- expected due to this
  |             |
  |             expected `Gpu<(f32, f32), ...>`, found `(_, _)`
  |
  = note: expected struct `Gpu<(f32, f32), impl ::std::any::Any>`
              found tuple `(_, _)`
